--- a/weekendArticle.html
+++ b/weekendArticle.html
@@ -112,10 +112,11 @@
         </div>
         <div class="weekend-content__weekend-row weekend-content__weekend-row--vertical animate__fadeIn">
             <div class="weekend-content__weekend-column weekend-content__weekend-column--active">
-              <img src="./assets/images/wknd1.png" alt="">
+              <img id="cover" src="" alt="">
               <br>
               <br>
             </div>
+<!--             
             <div class="weekend-content__weekend-column weekend-content__weekend-column--notes">
               TIME TO RETIRE <br>
               TRANSITORY
@@ -128,23 +129,13 @@
               <a href="weekendArticle2.html" class="pink-link">
                 Read more
               </a>
-            </div>
-            <div class="weekend-content__weekend-column weekend-content__weekend-column--notes">
-              DON'T OVERTHINK THIS <br>
-              JUST JUMP
-              <br>
-              <img src="./assets/images/wknd3.png" alt="">
-              <br>
-              Lorem ipsum dolor sit amet, 
-              adipiscing elit, sed do eiusmod
-              <br>
-              <a href="" class="pink-link">
-                Read more
-              </a>
-            </div>
+            </div> 
+            -->
+            <!-- 
             <div class="weekend-content__weekend-column">
               <a href="weekendNotes.html" style="text-decoration:none">MORE WKND NOTES</a>
-            </div>
+            </div> 
+            -->
           </div>
         <div class="weekend-content__content weekend-content__content--article weekend-content__content-weekend weekend-content__content--active">
             <h1 class="weekend-content__title">
@@ -179,100 +170,15 @@
           </div>
           <div class="weekend-content__article weekend-content__article--anim animate__fadeIn">
             <p class="weekend-content__article-title">
-              EXPLORING PRECONDITIONS
+              <!-- title will be placed here -->
             </p>
             <p class="weekend-content__article-date">
-              December 12, 2021
+              <!-- date will be placed here -->
             </p>
-            <p class="weekend-content__article-paraghraph">
-                Dusted off an anecdote from late 2018, exploring the preconditions for what has started to unfold in 
-                markets, politics, policy (see below). It’s often good to step back, survey the landscape. The dynamics 
-                that brought us here were decades in the making. And it would be unprecedented if this cycle shift 
-                lasts less than ten years.
-              </p>
-              <p class="weekend-content__article-paraghraph">
-                Back in January with full weekend notes. All the best, E
-              </p>
-              <p class="weekend-content__article-paraghraph">
-                Week-in-Review (expressed in YoY terms): Mon: South Africa omicron cases surge but hospitalizations 
-                remain very low, PBOC cuts RRR 50bps, BOE Broadbent strikes a dovish tone, Saudi Arabia hikes the price 
-                of crude, Fauci says omicron severity is “encouraging”, US announces diplomatic boycott of the Beijing 
-                Olympics due to China’s human-rights abuses, Ukraine president Zelensky says capable of fighting off 
-                an attack from Russia, S&P +1.2%; Tue: RBA unch as exp, Biden/Putin have video conversation – Biden 
-                threatens economic sanctions if Russia invades Ukraine, EU travel restrictions unlikely due to omicron, 
-                Evergrande debt holders yet to receive coupon payment despite end of grace period, UAE switches its 
-                weekend to Sat/Sun from Fri/Sat, Australia house prices 21.7% as exp, China expts 22% (20.3%e) / impts 
-                31.7% (21.5%e), S. Africa 3Q GDP 2.9% (3.8%e), German ZEW 29.9 (25.4e), EU final 3Q GDP 3.9% (3.7%e), 
-                US unit labor cost 9.6% (8.3%e), S&P +2.1%; Wed: third booster shows evidence of being effective against 
-                omicron, Brazil CB hikes 150bps as exp, UK looks to impose more restrictive measures as omicron spreads 
-                rapidly, BoC unch as exp – removed “transitory” from inflation description, Scholtz takes over as German 
-                chancellor, RBI on hold as expected, Erdogan reiterates support of lower interest rates, Brazil ret sales 
-                -7.1% (-6.2%e), Russia CPI 8.4% (8.35%e), S&P +0.3%; Thur: Evergrande officially labeled a defaulter for 
-                the first time, China hikes FX reserve requirement ratio to stem currency strength, study finds omicron 
-                to be 4.2x more transmissible than delta, US senate blocks Biden’s vaccine mandate for private sector workers, 
-                Hungary hiked 20bps as exp (5th time in less than 1m), China CPI 2.3% (2.5%e) / PPI 12.9% (12.1%e) / agg 
-                financing 2.61T (2.696T exp), Mexico CPI 7.37% (7.24%e), US init claims 184k (220k exp), S&P -0.7%; Fri: US 
-                CPI 6.8% as exp / core CPI 4.9% as exp, Turkey CB intervened for third time this month – lira unch by the end 
-                of the day, Peru CB hiked 50bps as exp, US Senate passed a fast track measure to raise the debt ceiling, France 
-                to not participate in diplomatic boycott of Beijing games, Japan PPI 9% (8.5%e), Norway CPI 5.1% (4.6%e), 
-                Turkey exp infl 21.39% (15.61%p), UK IP 1.4% (2.2%e), Italy IP 2% (3.3%e), India IP 3.2% (3.7%e), Mexico IP 
-                0.7% (1.8%e), Brazil IPCA infl 10.74% (10.9%e), Canada capacity utilization 81.4% (83%e), US UofM 70.4 (68e) 
-                / 1y infl 4.9% (5%e) / 5-10y infl unch at 3%, S&P +1.0%; Sat: Navy beats Army 17-13.
-              </p>
-              <p class="weekend-content__article-paraghraph">
-                Weekly Close: S&P 500 +3.8% and VIX -11.98 at +18.69. Nikkei +1.5%, Shanghai +1.6%, Euro Stoxx +2.8%, Bovespa 
-                +2.6%, MSCI World +3.3%, and MSCI Emerging +1.1%. USD rose +16.4% vs Bitcoin, +11.3% vs Ethereum, +1.3% vs 
-                Turkey, +0.8% vs India, +0.6% vs Yen, +0.1% vs Chile, and flat vs Euro. USD fell -2.4% vs Australia, -1.8% vs 
-                Mexico, -1.0% vs Sweden, -0.9% vs Canada, -0.8% vs Brazil, -0.7% vs Russia, -0.7% vs South Africa, -0.3% vs 
-                Sterling, -0.2% vs Indonesia, and -0.1% vs China. Gold +0.1%, Silver -1.3%, Oil +8.2%, Copper +0.5%, Iron 
-                Ore +4.5%, Corn +1.0%. 5y5y inflation swaps (EU -3bps at 1.88%, US +3bps at 2.48%, JP +3bps at 0.43%, and UK 
-                -6bps at 3.90%). 2yr Notes +7bps at 0.66% and 10yr Notes +14bps at 1.49
-              </p>
-              <p class="weekend-content__article-paraghraph">
-                YTD Equity Indexes (high-to-low): UAE +76.1% priced in US dollars (+76.1% priced in dirham), Argentina +38.2% 
-                priced in US dollars (+66.8% in pesos), Israel +31.9% in dollars (+27.2% in shekels), Czech Republic +30.3% 
-                (+36.8%), Saudi Arabia +25.9% (+25.9%), Austria +25.5% (+36.3%), S&P 500 +25.5%, Taiwan +22.6% (+21%), NASDAQ 
-                +21.3%, India +20.9% (+25.2%), Canada +20.4% (+19.8%), MSCI World +18.5% (+18.5%), Norway +18.3% (+23.3%), 
-                Netherlands +16.8% (+26.2%), France +16.6% (+25.9%), Russia +16% (+14.3%), Denmark +15.7% (+25.5%), Switzerland 
-                +13% (+17.8%), Sweden +12% (+23.5%), Russell +12%, Hungary +11.7% (+21.5%), Mexico +11.2% (+16.2%), Italy +10.7% 
-                (+20.2%), South Africa +10.4% (+20.2%), UK +9.7% (+12.9%), Poland +9.4% (+19.9%), Euro Stoxx 50 +9.4% (+18.2%), 
-                Indonesia +8.7% (+11.3%), China +8.2% (+5.6%), Venezuela +7.5% (+337.2%), Singapore +6.9% (+10.3%), Finland +6.6% 
-                (+15.7%), Belgium +6.4% (+14.9%), Germany +4.9% (+13.9%), Australia +4.1% (+11.6%), Greece +2.8% (+11.1%), 
-                Ireland +2.6% (+10.8%), Portugal +0.8% (+8.8%), Thailand -0.3% (+11.7%), Korea -3.3% (+4.8%), Philippines -3.8% 
-                (+0.7%), Spain -4.1% (+3.5%), Japan -5.6% (+3.6%), New Zealand -7.2% (-1.8%), Chile -11% (+5.5%), HK -12.4% (-11.9%), 
-                Malaysia -12.7% (-8.5%), Colombia -15.2% (-3.4%), Brazil -16.6% (-9.5%), Turkey -26.1% (+37.8%).
-              </p>
-              <p class="weekend-content__article-paraghraph">
-                Anecdote (Oct 2018): The future is unknowable. Yet never has capital been so concentrated in strategies that 
-                depend on the future closely resembling the past. The most dominant of these strategies requires bonds to rally 
-                when stocks fall. For decades, both rose inexorably. And a new array of increasingly complex and illiquid strategies 
-                depends on a jump in volatility to be followed by a rapid decline of equal magnitude. They appear uncorrelated until 
-                they are not. Virtually every investment portfolio measures risk by utilizing some combination of volatility and 
-                correlation, both of which are backward-looking and low. But the present is knowable. The past too. And the multi-decade 
-                trends that carried us to today produced levels of inequality rarely seen. Low levels of inflation, growth, productivity, 
-                and volatility are features of this cycle’s increasingly unequal distribution. But cycle extremes produce pressures that 
-                reverse their direction. On cue, an anti-establishment political wave washed away the globalists, with promises to turn 
-                the tide. Such change is nothing new, just another loop around the sun. Now signs of a cycle swing abound; shifting trade 
-                agreements, global supply chains, military dynamics, immigration, wage pressures, polarization, nationalism, tribalism. 
-                To an observer, it’s neither right nor wrong, it simply is. Some see parallels between today and the late-1930s, which 
-                led to World War II. We also see parallels with the mid-1960s, which led to The Great Inflation. What comes next is sure 
-                to look different still. But investment strategies that prospered from the past decade’s low inflation, growth, productivity 
-                and volatility will face headwinds as this cycle turns. Those strategies that suffered should enjoy tailwinds. That’s 
-                how cycles work. And we know the 1940s was a strong decade for Trend performance. The 1970s was the best decade for Trend 
-                in 150yrs. And following cycle turns in both the 1930s and 1960s, the world became a profoundly volatile place.
-              </p>
-              <p class="weekend-content__article-paraghraph">
-                Good luck out there,
-              </p>
-              <p class="weekend-content__article-paraghraph">
-                Eric Peters
-              </p>
-              <p class="weekend-content__article-paraghraph">
-                Chief Investment Officer
-              </p>
-              <p class="weekend-content__article-paraghraph">
-                One River Asset Management           
-              </p>
+            <div class="weekend-content__article-content">
+              <!-- content will be placed here -->
+            </div>
+            
 
             <a href="weekendNotes.html" class="weekend-content__article-link">
               BACK
@@ -413,6 +319,50 @@
                 }
             }, 200);
         })
+    </script>
+
+    <script src="./js/articles.js"></script>
+
+    <script>
+        const urlSearchParams = new URLSearchParams(window.location.search);
+        const params = Object.fromEntries(urlSearchParams.entries());
+        if(!params.articleId && params.articleId != 0) {
+            // window.location.replace("./weekendNotes.html");
+        }
+
+        document.querySelector('.weekend-content__article-title').innerHTML = articles[params.articleId].title;
+        document.querySelector('.weekend-content__article-date').innerHTML = articles[params.articleId].date;
+        document.querySelector('.weekend-content__article-content').innerHTML = articles[params.articleId].content;
+        document.getElementById('cover').src = articles[params.articleId].img;
+
+        var startIndex = Math.floor((Math.random()*37) + 0);
+        for(let i = startIndex; i <= startIndex+1; i++) {
+            var row = document.querySelector('.weekend-content__weekend-row');
+            var col = document.createElement('div');
+            col.classList.add('weekend-content__weekend-column');
+            row.appendChild(col);
+
+            var title = document.createElement('p');
+            title.innerHTML = articles[i].title;
+            title.style.minHeight = '64px';
+            col.appendChild(title);
+
+            var img = document.createElement('img');
+            img.src = articles[i].img;
+            img.alt = articles[i].title;
+            col.appendChild(img);
+
+            col.innerHTML = col.innerHTML + `
+            <br> 
+            ` + articles[i].date + "<br>";
+
+            var a = document.createElement('a');
+            a.href = "./weekendArticle.html?articleId="+i;
+            a.classList.add('pink-link');
+            a.innerHTML = 'Read more';
+            col.appendChild(a);
+        }
+
     </script>
 </body>
 
