--- a/weekendNotes.html
+++ b/weekendNotes.html
@@ -63,8 +63,8 @@
     <div class="weekend-content">
       <div class="weekend-content__banner">
         <div class="weekend-content__banner-image u-image-cover">
-          <video width="1920" height="390" class="u-image-cover" loop playsinline autoplay muted preload="metadata" poster="https://bowberes.sirv.com/OneRiver/Data%20room_60fps_V2.1.mp4?thumbnail=1920">
-            <source src="https://bowberes.sirv.com/OneRiver/Data%20room_60fps_V2.1.mp4" type="video/mp4">
+          <video width="1920" height="390" class="u-image-cover" loop playsinline autoplay muted preload="metadata" poster="https://letivesi.sirv.com/Data%20Room_60fps_V3.mp4?thumbnail=1920">
+            <source src="https://letivesi.sirv.com/Data%20Room_60fps_V3.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
